--- a/test.yml
+++ b/test.yml
@@ -1,7 +1,8 @@
 ---
-- name: This is a hello-world example
+- name: Hello World!
+  hosts: all
+
   tasks:
-    - name: Create a file called '/tmp/testfile.txt' with the content 'hello world'.
-      copy:
-        content: hello worldn
-        dest: /tmp/testfile.txt
+
+  - name: Hello World!
+    shell: echo "Hi! Tower is working!"
