--- a/test.yml
+++ b/test.yml
@@ -4,5 +4,5 @@
 
   tasks:
 
-  - name: Hello World!
+  - name: Hello World! {{ my_variable }}
     shell: echo "Hi! Tower is working! My variable: {{ my_variable }}"
