--- a/test.yml
+++ b/test.yml
@@ -5,4 +5,4 @@
   tasks:
 
   - name: Hello World! {{ my_variable }}
-    shell: echo "Hi! Tower is working! v2 My variable '{{ my_variable }}'"
+    shell: echo "Hi! Tower is working! v2 My variable':' '{{ my_variable }}'"
