--- a/test.yml
+++ b/test.yml
@@ -6,3 +6,8 @@
 
   - name: Hello World! {{ my_variable }}
     shell: echo "Hi! Tower is working! v2 My variable':' '{{ my_variable }}'"
+
+- name: Creates directory
+  file:
+    path: /tmp/MyTest
+    state: directory
