--- a/test.yml
+++ b/test.yml
@@ -12,3 +12,7 @@
       path: /tmp/MyTest
       state: directory
     when: 0 == 0
+    
+    
+  - name: Debug code that I added
+    debug: msg="Encryption Exit code '{{ my_variable }}'"
