--- a/vmcred.yml
+++ b/vmcred.yml
@@ -9,6 +9,6 @@
 
   tasks:
     - debug:
-        var: vmware
-             username
-             password
+        vars: vmware
+              username
+              password
